WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281046
REGRESSION(
284780@main
): Release build error with ENABLE_TREE_DEBUGGING
https://bugs.webkit.org/show_bug.cgi?id=281046
Summary
REGRESSION(284780@main): Release build error with ENABLE_TREE_DEBUGGING
Frédéric Wang Nélar
Reported
2024-10-08 03:12:30 PDT
This was added in
bug 276706
: /host/home/fred/src-obj/WebKit/Source/WebCore/rendering/RenderLayer.cpp: In function ‘void outputLayerPositionTreeRecursive(WTF::TextStream&, const WebCore::RenderLayer&, unsigned int)’: /host/home/fred/src-obj/WebKit/Source/WebCore/rendering/RenderLayer.cpp:6519:15: error: ‘const class WebCore::RenderLayer’ has no member named ‘m_repaintContainer’ 6519 | if (layer.m_repaintContainer) | ^~~~~~~~~~~~~~~~~~ /host/home/fred/src-obj/WebKit/Source/WebCore/rendering/RenderLayer.cpp:6520:52: error: ‘const class WebCore::RenderLayer’ has no member named ‘m_repaintContainer’ 6520 | stream << " (repaint container: " << layer.m_repaintContainer.get() << ")"; | ^~~~~~~~~~~~~~~~~~ [29/206] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-26ec8d00-4.cpp.o^C ninja: build stopped: interrupted by user. The code above is guarded by #if ENABLE(TREE_DEBUGGING) but the declaration of m_repaintContainer is guarded by #if ASSERT_ENABLED || ENABLE(CONJECTURE_ASSERT)
Attachments
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2024-10-08 03:18:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34831
EWS
Comment 2
2024-10-08 10:25:14 PDT
Committed
284835@main
(2f32642ef492): <
https://commits.webkit.org/284835@main
> Reviewed commits have been landed. Closing PR #34831 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-08 10:26:17 PDT
<
rdar://problem/137520054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug