REGRESSION(284780@main): Release build error with ENABLE_TREE_DEBUGGING https://bugs.webkit.org/show_bug.cgi?id=281046

Reviewed by Alan Baradlay and Matt Woodrow.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::outputLayerPositionTreeRecursive): Guard use of m_repaintContainer with the same condition as in the header file.

Canonical link: https://commits.webkit.org/284835@main